# TileQR-MPI

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  main.cpp  residual_check.hpp  tile_matrix.hpp
